# docker-pybind

./: Dockerfile
src/app/: main.py  test_bindlib.py
src/lib/: CMakeLists.txt  doublelistoperator.cpp  printmap.cpp  pylib.cpp
src/lib/include/: answer.hpp  base.hpp  derived.hpp  doublelistoperator.hpp  printmap.hpp
